crates/reinhardt-core/macros/tests/ui/api_view/fail/missing_equals.stderr
error: expected `,`
 --> tests/ui/api_view/fail/missing_equals.rs:6:20
  |
6 | #[api_view(methods "GET")]
  |                    ^^^^^
